// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MapSearchContainer /> should match its "active" snapshot 1`] = `
<div
  className="sc-bdVaJa jtlHGY"
/>
`;

exports[`<MapSearchContainer /> should match its empty snapshot 1`] = `
<div
  className="sc-bdVaJa YUoyc"
/>
`;
